adding signout functionality and building the basic profile page

--- a/src/components/movieRows/movieRow.module.css
+++ b/src/components/movieRows/movieRow.module.css
@@ -30,6 +30,9 @@
   transform: scale(1.09);
   opacity: 1;
 }
+.movie_row {
+  margin-bottom: 15px;
+}
 .loading {
   text-align: center;
   width: 100%;
